优化:代码结构,新增权限SQL生成
