# types/admin/auth/types.go
@@ -1,6 +1,10 @@
 // Code generated by goctl. DO NOT EDIT.
 package auth
 
+type PathId struct {
+	Id int `uri:"id"`
+}
+
 type AuthListResponse struct {
 	Tree []Auth `json:"tree"` // 节点树
 }
@@ -26,15 +30,6 @@ type AuthAddRequest struct {
 }
 
 type AuthEditRequest struct {
-	Id     int    `uri:"id"`
-	Pid    int    `json:"pid"  binding:"min=0"`
-	Key    string `json:"key" binding:"required" label:"权限标识"`               // 权限标识
-	Name   string `json:"name" binding:"required" label:"节点名"`               // 节点名
-	IsMenu int    `json:"isMenu" binding:"oneof=0 1" label:"是否是菜单栏 0：否 1：是"` // 是否是菜单栏 0：否 1：是
-	Api    string `json:"api" label:"接口"`                                    // 接口
-	Action string `json:"action" label:"操作方法"`                               // 操作方法
-}
-
-type AuthDeleteRequest struct {
-	Id int `uri:"id"`
+	PathId
+	AuthAddRequest
 }
