# types/admin/role/types.go
@@ -1,25 +1,23 @@
 // Code generated by goctl. DO NOT EDIT.
 package role
 
+type PathId struct {
+	Id int `uri:"id"`
+}
+
 type RoleListRequest struct {
 	Page     int `form:"page" label:"分页"`       // 分页
 	PageSize int `form:"pageSize" label:"每页条数"` // 每页条数
 }
 
 type RoleListResponse struct {
-	Page     int        `json:"page"`     // 分页
-	PageSize int        `json:"pageSize"` // 每页条数
-	Total    int        `json:"total"`    // 总条数
-	Data     []RoleList `json:"data"`     // 具体数据
+	Total int        `json:"total"` // 总条数
+	Data  []RoleList `json:"data"`  // 具体数据
 }
 
 type RoleList struct {
 	Id   int    `json:"id"`
 	Name string `json:"name"` // 角色名
-}
-
-type RoleDetailRequest struct {
-	Id int `uri:"id"`
 }
 
 type RoleDetailResponse struct {
@@ -34,11 +32,6 @@ type RoleAddRequest struct {
 }
 
 type RoleEditRequest struct {
-	Id   int    `uri:"id"`
-	Name string `json:"name" binding:"required" label:"角色名"`        // 角色名
-	Auth []int  `json:"auth" binding:"required,min=1" label:"权限ID"` // 权限ID
-}
-
-type RoleDeleteRequest struct {
-	Id int `uri:"id"`
+	PathId
+	RoleAddRequest
 }
